Fixing documentation
